--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-delicous mango
+<html>
+<head>
+        <title>
+         MANGO
+      </title>
+<head>
+        <body>
+          Hello world
+        </body>
+</html>
+        
