--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
       </title>
 <head>
         <body>
+          <nav>
+          <a href+"./index.html">Home</a>
+                  <a href="./about.html">About</a>       
+          </nav>
+          <header>
+          <h1>
           Hello world
+          <h1>              
         </body>
 </html>
         
