--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
           <header>
           <h1>
           Hello world
-          <h1>              
+          </h1>
+           </header>
         </body>
 </html>
         
