--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
           </nav>
           <header>
           <h1>
-          Hello world
-          <h1>              
+          Rip mango
+          </h1>
+           </header>
         </body>
 </html>
