--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
         <title>
          MANGO
       </title>
-<head>
+        <link scr="./style.css" type="stylesheet"/>
+        <style>
+header {
+            font-family: sans-serif;
         <body>
           <nav>
           <a href="./index.html">Home</a>
