--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 header {
             font-family: sans-serif;
                 }
+        </style>
         <body>
           <nav>
           <a href="./index.html">Home</a>
