--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ header {
             font-family: sans-serif;
                 }
         </style>
+        </head>
         <body>
           <nav>
           <a href="./index.html">Home</a>
