--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h2> Juicy Mangos</h2>
             <p> Love Juicy mangos</p>
             <p> They are delicous</p>
+            <p> "King of fruits"</p>
          </article>
       </main>
       <footer>
