--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p> Love Juicy mangos</p>
             <p> They are delicous</p>
             <p> "King of fruits"</p>
-            <img src="https://images.unsplash.com/photo-1544531480-9eadeb3c8f41?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80">
+            <img width 100% src="https://images.unsplash.com/photo-1544531480-9eadeb3c8f41?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80">
          </article>
       <footer>
          <p> This website was made by Leslie R</p>
