--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p> Love Juicy mangos</p>
             <p> They are delicous</p>
             <p> "King of fruits"</p>
-            <img height="50%" src="https://images.unsplash.com/photo-1557763178-c2965e99ff99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
+            <img width="50%" src="https://images.unsplash.com/photo-1557763178-c2965e99ff99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
          </article>
       <footer>
          <p> This website was made by Leslie R</p>
